--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,22 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Get the latest weather updates for your location and other cities with our Weather App."
     />
+    <meta
+      name="keywords"
+      content="weather, forecast, temperature, humidity, wind, precipitation"
+    />
+    <meta name="author" content="Shubham Dasarwar" />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
+      rel="stylesheet"
+    />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,7 +37,20 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Weather App</title>
+
+    <meta property="og:title" content="Weather App">
+    <meta property="og:description" content="Get the latest weather updates for your location and other cities with our Weather App.">
+    <meta property="og:image" content="https://example.com/weather-app.png">
+    <meta property="og:url" content="https://example.com/weather-app">
+    <meta property="og:type" content="website">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Weather App">
+    <meta name="twitter:description" content="Get the latest weather updates for your location and other cities with our Weather App.">
+    <meta name="twitter:image" content="https://example.com/weather-app.png">
+
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
