--- a/public/index.html
+++ b/public/index.html
@@ -2,68 +2,41 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Get the latest weather updates for your location and other cities with our Weather App."
-    />
-    <meta
-      name="keywords"
-      content="weather, forecast, temperature, humidity, wind, precipitation"
-    />
+    <meta name="description" content="Get the latest weather updates for your location and other cities with our Weather App."/>
+    <meta name="keywords" content="weather, forecast, temperature, humidity, wind, precipitation"/>
     <meta name="author" content="Shubham Dasarwar" />
-
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
-      rel="stylesheet"
-    />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet"/>
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png">
+    <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest">
+    <link rel="mask-icon" href="%PUBLIC_URL%/safari-pinned-tab.svg" color="#6c63ff">
+    <meta name="msapplication-TileColor" content="#6c63ff">
+    <meta name="theme-color" content="#6c63ff">
+
     <title>Weather App</title>
 
     <meta property="og:title" content="Weather App">
     <meta property="og:description" content="Get the latest weather updates for your location and other cities with our Weather App.">
-    <meta property="og:image" content="https://example.com/weather-app.png">
-    <meta property="og:url" content="https://example.com/weather-app">
+    <meta property="og:image" content="%PUBLIC_URL%/weather-card.png">
+    <meta property="og:url" content="%PUBLIC_URL%/">
     <meta property="og:type" content="website">
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Weather App">
     <meta name="twitter:description" content="Get the latest weather updates for your location and other cities with our Weather App.">
-    <meta name="twitter:image" content="https://example.com/weather-app.png">
-
+    <meta name="twitter:image" content="%PUBLIC_URL%/weather-card.png">
 
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
